--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
     <groupId>com.amannmalik</groupId>
     <artifactId>sahc4j</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+
+    <packaging>jar</packaging>
+
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -19,7 +23,5 @@
             </plugin>
         </plugins>
     </build>
-
-
 
 </project>
